# curriculum-vitae-query-assistant

./: .env.example  .gitignore  Dockerfile  README.md  README_PTBR.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.py
apps/accounts/: apps.py
apps/core/boundaries/: easyocr_service.py  huggingface_service.py  pypdf_service.py
apps/core/boundaries/interfaces/: easyocr_service.py  llm_service.py  ocr_service.py  pdf_service.py
apps/core/controls/: custom_api_exception.py  llm_exception.py  ocr_exception.py  standard_api_response.py  standard_exception_handler.py  standard_response_middleware.py  standard_response_mixin.py  standard_response_renderer.py
apps/core/entities/enums/: allowed_files.py  allowed_images.py  llm_models.py  ocr_models.py  request_status.py
apps/core/utils/: file_validator.py  image_validator.py
apps/curricula_vitae/: admin.py  apps.py
apps/curricula_vitae/boundaries/: curriculum_api_view.py  curriculum_doc.py  curriculum_service.py  curriculum_url.py
apps/curricula_vitae/containers/: curriculum_container.py
apps/curricula_vitae/controls/: curriculum_exception.py
apps/curricula_vitae/entities/models/: curriculum.py
apps/curricula_vitae/entities/serializers/: curriculum_create_input.py  curriculum_create_output.py
apps/documents/: apps.py
apps/documents/boundaries/: document_url.py  document_view.py
apps/documents/entities/models/: document.py
docs/: links.txt
setup/: asgi.py  settings.py  urls.py  wsgi.py
